css/main.css
/* ... */
.album-text{
  left: 0;
  position:absolute;
  top: 50%;
  width: 100%;

}

.album-image:before {
    content:'\A';
    position:absolute;
    width:100%; height:100%;
    top:0; left:0;
    background:rgba(0,0,0,0.4);
    opacity:1;
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
}


.album-image:hover:before {
    opacity:0;
}


.price {
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.3rem;
  margin-top: 0.05rem;
  margin-bottom: 0.5em;
}

.listing {
  max-width: 50%;
  background: #FFFFFF;
  padding: 1rem;
}


/*package listing page*/

.package-menu-item1 {
  display: inline-block;
  width: 100%;
  height: 35em;
  position: relative;
  background-color: #f1f2f2;
  padding: 0em 3em;
  z-index: 30;
  border-bottom: .5px solid #A8A7A7;
}

.package-menu-item2 {
  display: inline-block;
  width: 100%;
  height: 35em;
  position: relative;
  background-color: #ffffff;
  padding: 0em 3em;
  border-bottom: .5px solid #A8A7A7;
  z-index: 30;
}

.pk-img {
  position: absolute;
  left: 0;
  top: 0;
  object-fit: cover;
  height: 100%;
  width: 100%;
  opacity: 0;
  z-index: -1;
}

.package-menu-item1:hover .pk-img {
  opacity: 1;
}

.package-menu-item1:hover h2 {
  color: #ffffff;
}

.package-menu-item1:hover p {
  color: #ffffff;
}

.package-menu-item2:hover .pk-img {
  opacity: 1;
}

.package-menu-item2:hover h2 {
  color: #ffffff;
}

.package-menu-item2:hover p {
  color: #ffffff;
}



/*package detail page*/

.product-image {
  position: relative;
  left: 25%;
  top: 7em;
  width: 100%;
  height: auto;
}

.pk-detail-caption {
  font-size: 1.5rem;
  padding: 1em 1em;
  margin-top: 2em;
}

.package-detail-info {
  position: relative;
  display: block;
  left: 15%;
  top: 7em;
  width: 80%;
  padding: 0.2em 4em;
}

.package-detail-info h1{
  padding-top: 0;
  margin-top: 0;
  padding-bottom: 0.3em;
}

.package-detail-info .price{
  padding-top: 0;
  padding-bottom: 1.5em;
}

.section-label {
  display: block;
  color: #A8A7A7;
  font-family: "Apercu", Verdana, sans-serif;
  text-transform: uppercase;
  font-size: 0.80rem;
  letter-spacing: 0.08rem;
  padding-top: 1rem;
  margin-top: 1rem;
}

/*choose a date page*/

/*wraps all the info on the page*/
.page-info {
  display: block;
  position: relative;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

/*Page heading*/
.date-title {
  display: block;
  position: relative;
  float: left;
  top: 7em;
  padding-bottom: 1em;
}

/*Year and month dropdown menus*/
.date-title .dropdown {
  display: inline-block;
  position: relative;
  margin-top: 3em;
  margin-bottom: 2em;
}

.cal-grid {
  display: block;
  position: relative;
  float: left;
  margin-top: 3em;

}

.weekdays {
  display: block;
  position: relative;
  margin-top: 0.2em;
  margin-bottom: 0;
  list-style: none; 
}

.weekdays li {
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1rem;
  text-align: left;
  color: #A8A7A7;

  display: inline-block;
  margin: 2em 0.2em;
  padding: 0;

}

.cal-month {
  display: block;
  position: relative;
  margin-top: 0.2em;
  margin-bottom: 0;
  list-style: none;
}

.cal-month li {
  display: inline-block;
  position: relative;
  margin: 0 0.3em 0.3em 0;
  
}

.day-cell {
  display: inline-block;
  position: relative;
  width: 100%;
  padding: 1.3em;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 2rem;
  text-align: center;
  text-decoration: none;
  color: #A8A7A7;

  border: 2px solid #A8A7A7;
}

.day-cell:active, .day-cell:hover, .day-cell:focus {
  color: #ED834E;
  border: 2px solid #ED834E;

}

.cal-buttons {
  display: block;
  position: relative;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}


/*checkout page w/ forms*/

.checkout-forms {
  display: block;
  position: relative;
  left: 10%;
  top: 8em;
  width: 80%;
  padding: 0.2em 4em;
}

.checkout-forms h3 {
  padding-bottom: 0.3em;
  margin-bottom: 0.3em;
}

.checkout-forms input {
  width: 100%;
}

.form-theme-section {
  padding-top: 1em;
}

.checkout-package-info {
  display: block;
  position: relative;
  left: 10%;
  top: 8em;
  width: 80%;
  padding: 0.2em 4em;
}

.your-package {
  margin-bottom: 0;
  border-bottom: 1px solid #4B4F56;
}

.checkout-package-info .section-label {
  padding-top: 1em;
  margin: 0;
  padding-bottom: 0.1em;

}

.checkout-package-title {
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.5rem;
  font-weight: bold;
  color: #4B4F56;
  width: 100%;
  padding-top: 0.1em;
  padding-bottom: 0.4em;
  margin: 0;
}

.checkout-booked-date {
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.2rem;
  font-weight: bold;
  color: #4B4F56;
  width: 100%;
  padding-top: 0.1em;
  padding-bottom: 0.7em;
  margin: 0;
}


.checkout-total {
  display: inline-block;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.3rem;

  padding-top: 0.5em;
  margin-top: 0.05rem;
  margin-bottom: 0.5em;
}

.checkout-price {
  display: inline-block;
  font-family: "Apercu", Verdana, sans-serif;
  font-size: 1.3rem;
  float: right;
  text-align: right;
  padding-top: 0.5em;
  margin-top: 0.05rem;
  margin-bottom: 0.5em;
}

/*review your booking*/

.review-forms {
  display: block;
  position: relative;
  left: 10%;
  top: 8em;
  width: 80%;
  padding: 0.2em 4em;
}

.checkout-package-info {
  display: block;
  position: relative;

  padding: 0.2em 4em;
}

.review-forms p{
  padding-top: 0.3em;
  margin-top: 0;
}


/*about page*/

.about-content {
  display: block;
  position: relative;
  left: 5%;
  top: 1em;
  width: 80%;
  padding: 0.2em 4em;
}

.about-content p, .contact-content p{
  display: inline-block;
  border-style: none;
  border-bottom: thin solid #fffff;
  margin-left: 10%;
  margin-top: 5%; 
  z-index: 30;
  text-align: left;
}
/* ... */

